src/test/resources/public/input/typechecking/fail/double_decl/fail05.jova
class Nested {

  public int fortyTwo(int x, String x) {
    return 42;
  }
}
